--- a/sk-php-centos.tmpl
+++ b/sk-php-centos.tmpl
@@ -11,7 +11,7 @@ PHPRC=/usr/local/lib
 export PHPRC
 export PHP_FCGI_MAX_REQUESTS=500
 export PHP_FCGI_CHILDREN=10
-exec  /usr/bin/php73-cgi
+exec  /usr/bin/phpPHP_VERSION-cgi
 "
 wrapper_file="$home_dir/$user/web/$domain/cgi-bin/fcgi-starter"
 
